--- a/resources/admin/components/BuilderTour.scss
+++ b/resources/admin/components/BuilderTour.scss
@@ -4,7 +4,7 @@
  * Styles for the guided tour overlay and tooltip.
  */
 
-.builder-tour {
+.sf-builder-tour {
 	&__overlay {
 		position: fixed;
 		inset: 0;
