--- a/resources/admin/components/FormPreviewModal.scss
+++ b/resources/admin/components/FormPreviewModal.scss
@@ -11,7 +11,7 @@
 	}
 }
 
-.form-preview-modal {
+.sf-form-preview-modal {
 	&__header {
 		display: flex;
 		justify-content: space-between;
@@ -115,7 +115,7 @@
 	}
 }
 
-.form-preview-field {
+.sf-form-preview-field {
 	margin-bottom: 1rem;
 
 	label {
